Fix the gap between the picture and link

--- a/src/components/Landing/Landing.module.css
+++ b/src/components/Landing/Landing.module.css
@@ -140,6 +140,7 @@
       "description";
     padding: 12px 20px;
     column-gap: revert;
+    row-gap: 32px;
   }
 
   .nameWrapper {
@@ -171,7 +172,6 @@
     gap: 16px;
     font-size: 1.25rem;
     font-weight: 300;
-    margin-bottom: 32px;
   }
 
   .description {
